2018-03-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* Password input fields.

2018-02-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Background colors may now be specified as gradients.

	* Implement basic theme option flags.

2018-02-18  Sam Varshavchik  <mrsam@courier-mta.com>

	* Use CopyArea() to optimize scrollbar-based scrolling.

0.2

2018-02-10  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement the print dialog.

	* hotspot: cool down to warm or cold temperature if the window
	loses keyboard focus.

2018-02-02  Sam Varshavchik  <mrsam@courier-mta.com>

	* list.C (single_selection_type): Do not deselect if the selected
	item is already selected. Add single_optional_selection_type()
	that preserves the former behavior of single_selection_type(), if
	so desired.

2018-01-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* docbook/validatedinput.xml: Input field validation framework.

2018-01-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* window_handler.C (release_grabs): Don't ungrab the pointer if there's
	an active grab in progress, this should ungrab only if there was
	a passive grab.

2018-01-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement input_field_config.maximum_size.

	* Implement synchronized list layout manager columns.

2018-01-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Use the pane layout manager for file dialogs. Fix a file dialog
	bug when there are multiple directory entries that different only
	in their upper/lower/title case.

2018-01-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* Added the pane layout manager.

	* Replaced new_listlayoutmanager.rows with new_listlayoutmanager.height
	in order to accomodate the pane layout manager.

0.1
	Initial release.