@@ -187,7 +187,7 @@ class LIBCXX_HIDDEN elementObj::implObj : public element_drawObj,
 		cursor_pointerptr pointer;
 
 		//! This element's tooltip factory
-		std::function<void (const tooltip_factory &)> tooltip_factory;
+		functionptr<void (const tooltip_factory &)> tooltip_factory;
 
 		//! This element's created tooltip
 		popupptr tooltip;
